[gd_scene load_steps=10 format=3 uid="uid://c3scsfv0f74bu"]

[ext_resource type="Texture2D" uid="uid://bidl06v5fr0ip" path="res://assets/game/background.jpg" id="1_ci853"]
[ext_resource type="Script" uid="uid://bcm7wc23a16tq" path="res://scripts/ui/character_select.gd" id="1_fjx3p"]
[ext_resource type="Texture2D" uid="uid://76clp60jjl2o" path="res://assets/ui/main_menu/back_arrow.png" id="2_gp4m6"]
[ext_resource type="Resource" uid="uid://cwuqowwkco0ql" path="res://resources/characters/character_skin_library.tres" id="2_iufww"]
[ext_resource type="Texture2D" uid="uid://csldc11lkoik7" path="res://assets/player/spriteframes/hit/0.png" id="5_iufww"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_ejph0"]
frames = 5
speed_scale = 12.0
frame_1/texture = ExtResource("5_iufww")
frame_1/duration = 1.0
frame_2/duration = 1.0
frame_3/duration = 1.0
frame_4/duration = 1.0

[sub_resource type="Animation" id="Animation_ejph0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/VBoxContainer/HBoxContainer/SkinContainer/CurrentSkin:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iufww"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/VBoxContainer/HBoxContainer/SkinContainer/CurrentSkin:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iqh33"]
_data = {
&"RESET": SubResource("Animation_ejph0"),
&"appear": SubResource("Animation_iufww")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fjx3p")
skinLibrary = ExtResource("2_iufww")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -36.0
offset_right = 64.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ci853")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "SELECT CHARACTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PrevArrow" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_gp4m6")
stretch_mode = 5
flip_h = true

[node name="PrevButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/PrevArrow"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -28.5
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer1" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SkinContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
theme_override_constants/margin_bottom = 35

[node name="CurrentSkin" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/SkinContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AnimatedTexture_ejph0")
expand_mode = 4
stretch_mode = 5

[node name="Spacer2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextArrow" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_gp4m6")
stretch_mode = 5

[node name="NextButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/NextArrow"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -28.5
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Select"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iqh33")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/PrevArrow/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/NextArrow/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
